Update chart.js to fix layout issues

--- a/static/style.css
+++ b/static/style.css
@@ -176,4 +176,8 @@ footer > a:hover {
   .row {
     flex-direction: column;
   }
+
+  .column {
+    flex: unset;
+  }
 }
